# super-join

./: .gitignore  .npmignore  Cargo.toml  LICENSE  LICENSE-APACHE  Makefile  package-lock.json  package.json  readme.md  todos.md  tsconfig.json  vibe-code-rules-prompt.md
notes/super-join-notes/: super-join notes.md
src/: core.rs  lib.rs  wasm.rs
src-js/: index.ts
src-js/__deno__/: index.test.ts  lib.deno.d.ts
src-js/__example__/: schema.ts  schema_aliases.ts  schema_definition.ts
src-js/__specs__/: index.test.ts  node.test.ts  test-code.ts
src/core/: fns.rs  join_monster_schema.rs  mod.rs  schema.rs  shared_schema.rs  sql_schema.rs  to_ir.rs  to_sql.rs
