[package]
name = "super-join"
version = "0.0.0"
edition = "2024"
authors = ["John Johnson <johnsonjo4531@gmail.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/johnsonjo4531/super-join"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.219", features = ["derive", "rc"] }
graphql-parser = "0.4.1"
js-sys = "0.3.77"
sea-query = "0.32.6"
serde_json = "1.0.140"
tsify = "0.5.5"
wasm-bindgen = "0.2"
